<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/quantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_0" />

    <Button
        android:id="@+id/incrementQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase_quantity" />

    <Button
        android:id="@+id/decrementQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrease_quantity" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_bdt_0" />

    <TextView
        android:id="@+id/seekBarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seekbar_value" />

    <SeekBar
        android:id="@+id/quantitySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10" />

    <RadioGroup
        android:id="@+id/sizeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small1" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium1" />

        <RadioButton
            android:id="@+id/large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large1" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/croissant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/croissant" />

    <CheckBox
        android:id="@+id/donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donut" />

    <CheckBox
        android:id="@+id/eclair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eclair" />

    <Switch
        android:id="@+id/expressDeliverySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/express_delivery1" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_0" />

    <Button
        android:id="@+id/placeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order1" />
    <Button
        android:id="@+id/clearOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_order" />
</LinearLayout>
